# loggregator

./: .dockerignore  README.md  perf_eval.py  pyproject.toml  report.md
docker/: Dockerfile.aggregator  Dockerfile.publisher  compose.yaml
src/aggregator/: .env.example  db.py  main.py  pubsub.py
src/common/: event.py  publishing.py
src/publisher/: .env.example  main.py
tests/: 001_dedup_validation_test.py  002_persistent_dedup_test.py  003_event_schema_validation_test.py  004_consistent_stats_events_test.py  005_batch_events_time_test.py
